<resources>
    <string name="app_name">Cakes</string>
    <string name="title_menu">Меню</string>
    <string name="title_profile" translatable="false">Профиль</string>
    <string name="title_cart" translatable="false">Корзина</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="imageview">imageView</string>
    <string name="setphone">Введите номер телефона</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">В корзину</string>
</resources>