<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    app:cardElevation="15dp"
    app:cardCornerRadius="5dp"
    android:layout_marginStart="45dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAlignment="center"
            android:layout_below="@+id/product_image"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/imageview" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_name"
            android:text="@string/product_price"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/button_add_to_cart"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_below="@id/product_price"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/add_to_cart"
            >
        </Button>

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>